--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
       </div>
     </nav>
     <!-- navbar  -->
+    <!-- // loader  -->
+    <div class="box">
+    </div>
 
     <div class="container"></div>
     <script src="script.js"></script>
